# airdcpp-windows

./: .gitattributes  .gitignore  .gitmodules  AirDC.rc  AirDC.sln  AirDC_installscript.nsi  CMakeLists.txt  CMakePresets.json  Changelog_AirDC.txt  EN_Example.xml  README.md  SConstruct  StrongDC.vcxproj  StrongDC.vcxproj.filters  appveyor.yml  boost-regex.vcproj  boost-regex.vcxproj  boost-regex.vcxproj.filters  bzip2.vcproj  bzip2.vcxproj  bzip2.vcxproj.filters  client.vcproj  client.vcxproj  client.vcxproj.filters  generate-version.bat  generate-version.sh  gitversioninfo.bat  make_release.bat  push-api.bat  push-core.bat  regex.vcproj  regex.vcxproj  regex.vcxproj.filters  sendrelease.bat  sendrelease.example.bat  sonar-project.properties  strongdc.vcproj  vcpkg-configuration.json  vcpkg.json  web-resources-update.cmd  (+3 more)
windows/: ADLSProperties.cpp  ADLSProperties.h  ADLSearchFrame.cpp  ADLSearchFrame.h  AVIPreview.cpp  AVIPreview.h  AboutDlg.cpp  AboutDlg.h  ActionUtil.cpp  ActionUtil.h  AdvancedPage.cpp  AdvancedPage.h  AirAppearancePage.cpp  AirAppearancePage.h  AirDC.rc  AirDCPage.cpp  AirDCPage.h  AirDownloadsPage.cpp  AirDownloadsPage.h  AirSharingPage.cpp  AirSharingPage.h  AppearancePage.cpp  AppearancePage.h  Async.h  AutoSearchFrm.cpp  AutoSearchFrm.h  AutoSearchGeneralPage.cpp  AutoSearchGroupDlg.cpp  AutoSearchGroupDlg.h  AutoSearchItemSettings.h  AutosearchAdvancedPage.cpp  AutosearchAdvancedPage.h  AutosearchDlg.cpp  AutosearchDlg.h  AutosearchGeneralPage.h  AutosearchOptionsDlg.cpp  AutosearchOptionsDlg.h  AutosearchPage.cpp  AutosearchPage.h  AutosearchParams.h  (+330 more)
windows/WTL/: atlapp.h  atlcrack.h  atlctrls.h  atlctrlw.h  atlctrlx.h  atlddx.h  atldlgs.h  atldwm.h  atlfind.h  atlframe.h  atlgdi.h  atlmisc.h  atlprint.h  atlres.h  atlribbon.h  atlscrl.h  atlsplit.h  atltheme.h  atlwince.h  atlwinx.h
windows/res/: StrongDC.Manifest
windows/windows/: ADLSProperties.cpp  ADLSearchFrame.cpp  ADLSearchFrame.h  AVIPreview.cpp  AVIPreview.h  AboutDlg.cpp  ActionUtil.cpp  ActionUtil.h  AdvancedPage.cpp  AdvancedPage.h  AirAppearancePage.cpp  AirAppearancePage.h  AppearancePage.cpp  AppearancePage.h  Async.h  AutoSearchFrm.cpp  AutoSearchFrm.h  AutoSearchGeneralPage.cpp  AutoSearchGroupDlg.cpp  AutoSearchGroupDlg.h  AutoSearchItemSettings.h  AutosearchAdvancedPage.cpp  AutosearchAdvancedPage.h  AutosearchGeneralPage.h  AutosearchParams.h  AutosearchSearchTimesPage.cpp  AutosearchSearchTimesPage.h  BarShader.cpp  BrowseDlg.cpp  BrowseDlg.h  BrowserBar.h  CDMDebugFrame.cpp  CDMDebugFrame.h  CProgressCtrlEx.h  CSplitterEx.h  ChatCommands.cpp  ChatCommands.h  ChatFilterDlg.cpp  ChatFilterDlg.h  ChatFilterPage.cpp  (+247 more)
windows/windows/components/: BarShader.cpp  BarShader.h  CProgressCtrlEx.h  DimEdit.h  ExCImage.h  ExListViewCtrl.cpp  ExListViewCtrl.h  ExMessageBox.cpp  ExMessageBox.h  FilteredListViewCtrl.h  ImageDataObject.cpp  InputBox.cpp  InputBox.h  ListFilter.cpp  ListFilter.h  OMenu.cpp  OMenu.h  SearchTypeCombo.cpp  SearchTypeCombo.h  ShellContextMenu.cpp  ShellContextMenu.h  TabbedDialog.cpp  TabbedDialog.h  TypedListViewCtrl.h
windows/windows/dialog/: AboutDlg.cpp  AboutDlg.h  BrowseDlg.cpp  BrowseDlg.h  HashProgressDlg.cpp  LineDlg.cpp  LineDlg.h  PopupDlg.cpp  PopupDlg.h  UpdateDlg.cpp  UpdateDlg.h
windows/windows/frames/: StaticFrame.h
windows/windows/players/: Players.cpp  Players.h  WMPlayerRemoteApi.cpp  iTunesCOMInterface.h
windows/windows/settings/: AVIPreview.cpp  AVIPreview.h  AdvancedPage.cpp  AdvancedPage.h  AirAppearancePage.cpp  AirAppearancePage.h  AppearancePage.cpp  AppearancePage.h  ChatFilterDlg.cpp  ChatFilterPage.cpp  ChatFilterPage.h  CommandDlg.cpp  LimitPage.h  (+71 more)
(+3772 files in other folders)
